# api_llm

./: .gitignore  Cargo.toml  readme.md  spec.md
api/claude/: Cargo.toml  readme.md  spec.md
api/claude/docs/: entities.md  readme.md  secret_loading.md
api/claude/examples/: claude_api_interactive.rs  claude_chat_streaming.rs  readme.md
api/claude/src/: authentication.rs  buffered_streaming.rs  circuit_breaker.rs  client.rs  content_generation.rs  curl_diagnostics.rs  enhanced_function_calling.rs  enterprise_config.rs  enterprise_quota.rs  error.rs  failover.rs  input_validation.rs  lib.rs  model_management.rs  rate_limiting.rs  readme.md  request_templates.rs  retry_logic.rs  secret.rs
api/claude/task/: decisions.md  readme.md
api/claude/tests/: readme.md  tests.rs
api/gemini/: Cargo.toml  readme.md  spec.md
api/gemini/api/: readme.md
api/gemini/benches/: rate_limiting_overhead.rs  readme.md
api/gemini/docs/: entities.md  readme.md  usage_examples.md
api/gemini/examples/: gemini_api_basic.rs  gemini_code_execution.rs  gemini_embeddings.rs  gemini_error_handling.rs  gemini_function_calling.rs  gemini_list_models.rs  gemini_multimodal.rs  gemini_performance_optimization.rs  gemini_safety_settings.rs  gemini_search_grounding.rs  gemini_system_instructions.rs  readme.md
api/gemini/scripts/: readme.md
api/gemini/src/: batch_api.rs  diagnostics.rs
api/gemini/task/: decisions.md  procedure.md  readme.md
api/gemini/tests/: api_key_failure_test.rs  api_key_failure_tests.rs  audio_processing_tests.rs  buffered_streaming_tests.rs  cache_tests.rs  code_execution_tests.rs  comprehensive_integration_tests.rs  compression_tests.rs  config_optimization_tests.rs  count_tokens_tests.rs  dynamic_configuration_tests.rs  enhanced_circuit_breaker_tests.rs  enhanced_rate_limiting_tests.rs  enhanced_retry_logic_tests.rs  example_validation_tests.rs  failover_tests.rs  health_checks_tests.rs  integration_tests.rs  model_comparison_tests.rs  readme.md  streaming_control_tests.rs  structured_logging_tests.rs  sync_api_tests.rs  system_instructions_tests.rs  templates_tests.rs  test_harness.rs  websocket_streaming_tests.rs
api/huggingface/: Cargo.toml  readme.md
api/huggingface/.config/: nextest.toml
api/huggingface/bug/: 001_rate_limiter_zero_capacity.md  002_failover_overflow.md  003_validate_temperature_nan.md  004_validate_top_p_nan.md  005_validate_frequency_penalty_nan.md  006_validate_presence_penalty_nan.md  007_validate_repetition_penalty_nan.md  008_url_validation_empty_host.md  009_cosine_similarity_no_clamping.md  readme.md
api/huggingface/docs/: entities.md  readme.md
api/huggingface/examples/: huggingface_automated_content_generator.rs  huggingface_chat_conversational.rs  huggingface_developer_code_assistant.rs  huggingface_document_semantic_search.rs  huggingface_educational_ai_tutor.rs  huggingface_intelligent_qa_system.rs  huggingface_multilingual_translator.rs  huggingface_sentiment_content_analyzer.rs  providers_api_demo.rs  readme.md
api/huggingface/src/: client.rs  diagnostics.rs  embeddings.rs  error.rs  inference.rs  lib.rs  models.rs  providers.rs  validation.rs
api/huggingface/task/: decisions.md  readme.md
api/huggingface/tests/: chatbot_example_test.rs  circuit_breaker_tests.rs  client_tests.rs  components_tests.rs  content_generator_example_test.rs  debug_validation.rs  doc_spec_tests.rs  document_search_example_test.rs  embeddings_tests.rs  error_handling_tests.rs  example_compilation_test.rs  failover_tests.rs  function_calling_tests.rs  health_check_tests.rs  inference_tests.rs  models_tests.rs  providers_api_integration_test.rs  providers_api_tests.rs  rate_limiting_tests.rs  readme.md  retry_tests.rs  streaming_tests.rs  sync_api_tests.rs  sync_token_counting_tests.rs  test_plan.md  token_counting_tests.rs  validation_tests.rs
api/ollama/: Cargo.toml  readme.md
api/ollama/.config/: nextest.toml
api/ollama/docs/: entities.md  readme.md
api/ollama/spec/: readme.md
api/ollama/src/: builders.rs  chat.rs  input_validation.rs  lib.rs
api/ollama/tests/: api_comprehensive_tests.rs  builder_patterns_tests.rs  core_client_api_tests.rs  core_functionality_tests.rs  embeddings_tests.rs  example_model_validation_test.rs  health_checks_tests.rs  rate_limiting_behavior_tests.rs  readme.md  secret_management_tests.rs  server_helpers.rs  streaming_request_validation_tests.rs  streaming_tests.rs  tool_calling_tests.rs  vision_support_tests.rs
api/openai/: Cargo.toml  readme.md  spec.md
api/openai/.config/: nextest.toml
api/openai/docs/: entities.md  readme.md
api/openai/examples/: openai_ai_code_reviewer.rs  openai_batch_content_processor.rs  openai_cached_interactive_chat.rs  openai_chat.rs  openai_comprehensive_metrics_demo.rs  openai_document_analyzer_vision.rs  openai_enhanced_client_with_caching.rs  openai_enhanced_error_recovery_demo.rs  openai_interactive_chat.rs  openai_multi_turn_conversation.rs  openai_realtime_conversation_item_create.rs  openai_realtime_conversation_item_delete.rs  openai_realtime_conversation_item_retrieve.rs  openai_realtime_conversation_item_truncate.rs  openai_realtime_input_audio_buffer_append.rs  openai_realtime_input_audio_buffer_clear.rs  openai_realtime_input_audio_buffer_commit.rs  openai_realtime_response_cancel.rs  openai_realtime_response_create.rs  openai_realtime_session_update.rs  openai_realtime_transcription_session_update.rs  openai_responses_cancel.rs  openai_responses_create_image_input.rs  openai_responses_create_with_tools.rs  openai_responses_delete.rs  openai_responses_get.rs  openai_responses_list_input_items.rs  openai_responses_update.rs  openai_web_research_assistant.rs  readme.md
api/openai/src/: builder_enhancements.rs  client_api_accessors.rs  client_ext_http_basic.rs  client_ext_http_stream.rs  diagnostics.rs  enhanced_batch_operations.rs  enhanced_client.rs  enhanced_retry.rs  lib.rs  model_deployment.rs  models.rs  response_cache.rs  (+1 more)
api/openai/tests/: readme.md  (+31 more)
api/openai_compatible/: Cargo.toml  readme.md
api/xai/: Cargo.toml  openapi.json  readme.md  spec.md
(+517 files in other folders)
