[workspace]
resolver = "2"
members = [
  "api/claude",
  "api/gemini",
  "api/huggingface",
  "api/ollama",
  "api/openai",
  "api/xai",
]

[workspace.metadata]
branches = [ "master", "alpha" ]
master_branch = "master"
workspace_name = "api_llm"
repo_url = "https://github.com/Wandalen/api_llm"
discord_url = "https://discord.gg/m3YfbXpUUY"

[workspace.lints.rust]
# Denies non-idiomatic code for Rust 2018 edition.
rust_2018_idioms = { level = "warn", priority = -1 }
# Denies using features that may break in future Rust versions.
future_incompatible = { level = "warn", priority = -1 }
# Warns if public items lack documentation.
missing_docs = "warn"
# Warns for public types not implementing Debug.
missing_debug_implementations = "warn"
# Denies all unsafe code usage.
unsafe-code = "deny"

[workspace.lints.clippy]
# Denies pedantic lints, enforcing strict coding styles and conventions.
pedantic = { level = "warn", priority = -1 }
# Denies undocumented unsafe blocks.
undocumented_unsafe_blocks = "deny"
# Denies to prefer `core` over `std` when available, for `no_std` compatibility.
std_instead_of_core = "warn"
# Denies including files in documentation unconditionally.
doc_include_without_cfg = "warn"
# Denies missing inline in public items.
missing_inline_in_public_items = "warn"

# exceptions

# Allows functions that are only called once.
single_call_fn = "allow"
# Allows forcing a function to always be inlined.
inline_always = "allow"
# Allows item names that repeat the module name (e.g., `mod user { struct User; }`).
module_name_repetitions = "allow"
# Allows using fully qualified paths instead of `use` statements.
absolute_paths = "allow"
# Allows wildcard imports (e.g., `use std::io::*;`).
wildcard_imports = "allow"
# Allow to prefer `alloc` over `std` when available, for `no_std` compatibility.
std_instead_of_alloc = "allow"
# Allow put definitions of struct at any point in functions.
items_after_statements = "allow"
# Allow precission loss, for example during conversion from i64 to f64
cast_precision_loss = "allow"
# Allows `pub use` statements.
pub_use = "allow"
# Allows the `?` operator.
question_mark_used = "allow"
# Allows implicit returns.
implicit_return = "allow"
# Allow ordering of fields in intuitive way.
arbitrary_source_item_ordering = "allow"
# Allow mod.rs files
mod_module_files = "allow"
# Allow missing docs for private items
missing_docs_in_private_items = "allow"

## api

[workspace.dependencies.api_openai]
version = "~0.2.0"
path = "api/openai"
default-features = false

[workspace.dependencies.api_claude]
version = "~0.3.0"
path = "api/claude"
default-features = false

[workspace.dependencies.api_ollama]
version = "~0.1.0"
path = "api/ollama"
default-features = false

[workspace.dependencies.api_xai]
version = "~0.2.0"
path = "api/xai"
default-features = false

## Peer

[workspace.dependencies.mod_interface]
version = "0.52.0"

[workspace.dependencies.former]
version = "2.37.0"

[workspace.dependencies.format_tools]
version = "0.6.0"

[workspace.dependencies.reflect_tools]
version = "0.7.0"

[workspace.dependencies.derive_tools]
version = "0.50.0"

[workspace.dependencies.error_tools]
version = "0.35.0"

[workspace.dependencies.asbytes]
version = "=0.2.0"

[workspace.dependencies.pth]
version = "0.25.0"

[workspace.dependencies.async_tools]
version = "=0.1.0"

[workspace.dependencies.macro_tools]
version = "0.69.0"

## External

[workspace.dependencies.rand]
version = "0.9.2"

[workspace.dependencies.fastrand]
version = "2.3.0"

[workspace.dependencies.dotenv]
version = "0.15"

[workspace.dependencies.async-trait]
version = "0.1.89"

[workspace.dependencies.regex]
version = "1.12.2"

[workspace.dependencies.url]
version = "2.5.7"

## serialization

[workspace.dependencies.serde]
version = "1.0.228"

[workspace.dependencies.serde_with]
version = "3.15.1"

[workspace.dependencies.serde_json]
version = "1.0.145"

[workspace.dependencies.serde_yaml]
version = "0.9.34"

[workspace.dependencies.base64]
version = "0.22.1"

[workspace.dependencies.secrecy]
version = "0.10.3"

[workspace.dependencies.urlencoding]
version = "2.1.3"

## crypto and compression

[workspace.dependencies.blake3]
version = "1.8.2"

[workspace.dependencies.sha2]
version = "0.10"

[workspace.dependencies.flate2]
version = "1.1.5"

[workspace.dependencies.brotli]
version = "8.0.2"

[workspace.dependencies.async-compression]
version = "0.4.33"

## system

[workspace.dependencies.ctrlc]
version = "3.5.1"

## sync primitives

[workspace.dependencies.parking_lot]
version = "0.12.5"

## async

[workspace.dependencies.futures]
version = "0.3.31"

[workspace.dependencies.futures-core]
version = "0.3.31"

[workspace.dependencies.futures-util]
version = "0.3.31"

[workspace.dependencies.futures-channel]
version = "0.3.31"

[workspace.dependencies.openai-api-rs]
version = "=6.0.8"

[workspace.dependencies.backoff]
version = "0.4.0"

[workspace.dependencies.tokio]
version = "1.48.0"

[workspace.dependencies.tokio-stream]
version = "0.1.17"

[workspace.dependencies.tokio-util]
version = "0.7.17"

[workspace.dependencies.tokio-test]
version = "0.4.4"

[workspace.dependencies.async-stream]
version = "0.3.6"

[workspace.dependencies.bytes]
version = "1.10.1"

[workspace.dependencies.eventsource-stream]
version = "0.2.3"

## web

[workspace.dependencies.reqwest]
version = "0.12.24"
default-features = false

[workspace.dependencies.reqwest-eventsource]
version = "0.6.0"

[workspace.dependencies.tracing]
version = "0.1.41"

[workspace.dependencies.tracing-subscriber]
version = "0.3.20"

[workspace.dependencies.tokio-tungstenite]
version = "0.28.0"

[workspace.dependencies.chrono]
version = "0.4.42"

[workspace.dependencies.toml]
version = "0.9.8"

[workspace.dependencies.tempfile]
version = "3.23.0"

[workspace.dependencies.workspace_tools]
version = "0.10.0"

[workspace.dependencies.glob]
version = "0.3.3"

[workspace.dependencies.unilang]
version = "0.39.0"
features = ["enabled"]
default-features = false

[workspace.dependencies.inventory]
version = "0.3.21"

[workspace.dependencies.walkdir]
version = "2.5.0"

[workspace.dependencies.notify]
version = "8.2.0"

[workspace.dependencies.uuid]
version = "1.18.1"
features = ["v4"]

[workspace.dependencies.memmap2]
version = "0.9.8"

[workspace.dependencies.tokei]
version = "12.1"
default-features = false

[workspace.dependencies.content_inspector]
version = "0.2.4"

[workspace.dependencies.ratatui]
version = "0.29.0"

[workspace.dependencies.crossterm]
version = "0.29.0"

## XAI-specific dependencies

[workspace.dependencies.tiktoken-rs]
version = "0.5"

[workspace.dependencies.lru]
version = "0.12"

[workspace.dependencies.prometheus]
version = "0.13"
